# mir

./: .gitignore  CMakeLists.txt  mir-gen.c  mir-hash.h  mir-interp.c  mir.c
c2mir/: c2mir-driver.c  c2mir.c
c2mir-tests/: c2mir-test-data.h  external-ret-by-ptr.c  external-ret-by-val.c
c2mir/x86_64/: cx86_64-code.c  mirc-x86_64-win32.h
hot-reload/: hello.c  main.c  mir-setup.h
